add alternative alt tab into main code

--- a/galal/autom4te.cache/output.3
+++ b/galal/autom4te.cache/output.3
@@ -16563,7 +16563,7 @@ fi
 # -----------------------------------------------------------
 # Final output
 # -----------------------------------------------------------
-ac_config_files="$ac_config_files Makefile src/Makefile lib/Makefile lib/gala.pc docs/Makefile data/Makefile data/icons/Makefile vapi/Makefile plugins/Makefile plugins/maskcorners/Makefile plugins/notify/Makefile plugins/zoom/Makefile plugins/alternate-alt-tab/Makefile po/Makefile.in"
+ac_config_files="$ac_config_files Makefile src/Makefile lib/Makefile lib/gala.pc docs/Makefile data/Makefile data/icons/Makefile vapi/Makefile plugins/Makefile plugins/maskcorners/Makefile plugins/notify/Makefile plugins/zoom/Makefile po/Makefile.in"
 
 
 cat >confcache <<\_ACEOF
@@ -17610,7 +17610,6 @@ do
     "plugins/maskcorners/Makefile") CONFIG_FILES="$CONFIG_FILES plugins/maskcorners/Makefile" ;;
     "plugins/notify/Makefile") CONFIG_FILES="$CONFIG_FILES plugins/notify/Makefile" ;;
     "plugins/zoom/Makefile") CONFIG_FILES="$CONFIG_FILES plugins/zoom/Makefile" ;;
-    "plugins/alternate-alt-tab/Makefile") CONFIG_FILES="$CONFIG_FILES plugins/alternate-alt-tab/Makefile" ;;
     "po/Makefile.in") CONFIG_FILES="$CONFIG_FILES po/Makefile.in" ;;
 
   *) as_fn_error $? "invalid argument: \`$ac_config_target'" "$LINENO" 5;;
